--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,33 @@
 version: '3.8'
-services:
+services:  
+  gateway:
+    build: ./gateway
+    ports:
+      - "4000:4000"
+    depends_on:
+      - auth
+      - user
+      - knowledge-base
+      - ai
+    environment:
+      - PORT=4000
+    volumes:
+      - ./gateway:/app
+    command: npm run dev
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    depends_on:
+      - gateway
+    ports:
+      - "5173:80"
+    environment:
+      - VITE_AUTH_API_URL=http://gateway:4000/auth
+      - VITE_CHAT_API_URL=http://gateway:4000/chat
+      - VITE_AI_API_URL=http://gateway:4000/ai
+      - VITE_KB_API_URL=http://gateway:4000/kb
   auth:
     build: ./services/auth
     ports:
@@ -34,6 +62,28 @@ services:
       - postgres
     volumes:
       - ./services/user:/app
+    command: npm run dev
+  knowledge-base:
+    build: ./services/knowledge-base
+    ports:
+      - "4004:4004"
+    environment:
+      - DATABASE_URL=postgresql://narayana:Narayana!23@postgres:5432/auth_db
+    depends_on:
+      - postgres
+    volumes:
+      - ./services/knowledge-base:/app
+    command: npm run dev
+  ai:
+    build: ./services/ai
+    ports:
+      - "4005:4005"
+    environment:
+      - DATABASE_URL=postgresql://narayana:Narayana!23@postgres:5432/auth_db
+    depends_on:
+      - postgres
+    volumes:
+      - ./services/ai:/app
     command: npm run dev
 volumes:
   pgdata:
